--- a/3d.html
+++ b/3d.html
@@ -12,7 +12,7 @@
 
   <script>
     
-    const fileName = "car.glb"; 
+    const fileName = "glass red flower.glb"; 
     
     const viewer = document.getElementById("viewer");
     viewer.src = fileName;
@@ -20,3 +20,4 @@
 
 </body>
 </html>
+
